# cpp_tour

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
cpp-template/: README.md
src/_start_here/: README.md
src/amortization/: BUILD  binary_counter_main.cc
src/arrays/: BUILD  dynamic_arrays_main.cc  main.cc
src/benchmark/: BUILD  emplace_vs_push.cc  growing_string.cc  insert_into_collection.cc  lib.cc  lib.h  plus_equal.cc  prefix_vs_postfix.cc  push_back_collection.cc  search_collection.cc  small_string.cc  split_string.cc  string_to_int.cc
src/bst/: BUILD  main.cc
src/cast/: BUILD  main.cc  static_cast_constructor.cc  static_cast_inheritance.cc
src/class/: BUILD  constructor_main.cc  destructor_main.cc  main.cc  operator_overloading3.cc  operator_overloading_main.cc  simple_class.cc  struct.cc
src/command_line/: BUILD  abseil_main.cc  main.cc  main_dash_dash.cc
src/const/: BUILD  const_class_main.cc  const_param_main.cc  main copy.cc  main.cc
src/constructor/: BUILD
src/control/: BUILD  for_main copy.cc  for_main.cc  if_main.cc  switch_main.cc  while_main.cc
src/cpp14/: BUILD  auto.cc  generic_lambda.cc  if_init.cc  lambda_capture_init.cc  other.cc
src/cpp17/: BUILD  copy_elision.cc  file_system.cc  file_system2.cc  file_system4.cc  if_init.cc  no_discard.cc  optional.cc  structure_binding.cc
src/cpp20/: BUILD
src/decltype/: BUILD  decltype_auto.cc
src/deep_c/: 379.cc  388.cc  BUILD  main.cc
src/dynamic_programming/: BUILD  (+11 more)
tests/: BUILD  backtracking_test.cc  search_test.cc  solution_test.cc  sort_test.cc  vector_union_test.cc
(+574 files in other folders)
